--- a/Technical Documentation Page/technical.html
+++ b/Technical Documentation Page/technical.html
@@ -3,29 +3,33 @@
 <head lang="en">
     <meta charset="utf-8">
     <link rel="stylesheet" href="./technical.css">
+    <title>Discrete Mathematics</title>
 </head>
 <body>
 <main id="main-doc">
     <!--Multiple sections required with a class of "main-section" and a header for each setion-->
     <nav id="navbar">
-        <a href="#section1">section1</a>
+        <a href="#logicandproofs">Logic and Proofs</a>
         <a href="#section2">section2</a>
         <a href="#section3">section3</a>
     </nav>
-    <section class="main-section" id="section1">
-        <h2>section1</h2>
-        <p>stuff here.</p>
+    <h1>Discrete Mathematics</h1>
+    <section class="main-section" id="logicandproofs">
+        <h2>Logic and Proofs</h2>
+        <p>Logic is key to a computer scientists work.  It guides the language and instruction as the scientist interfaces with the computer. It is important to build a stron foundation in logic and proofing as these principles will be used constantly.</p>
+        <p>Concepts introduced in this section are propositions, truth values, truth tables, logical operations, and compound statements</p>
+        <p>Logic is a study of reasoning, of course logic has to start with something.  The most basic type of logic is a proposition a statement that is true or false. An example of this is "The cat has four legs." this simple statement can be either true or false, yes or no, on or off, or in computer terms 0 or 1.</p>
     </section>
     <section class="main-section" id="section2">
         <h2>section2</h2>
         <p>stuff here.</p>
         <code>
-            #comment
-            sudocode line 1
+            "let x=true"
+            <h1></h1>
             sudocode line 2
         </code>
     </section>
-    <section>
+    <section class="main-section" id="section3">
         <h2>section3</h2>
         <p>stuff here.</p>
         <ul>
